# agent-md-validator

./: LICENSE  README.md  pyproject.toml
agent_md_validator/: __init__.py  cli.py  reporter.py  schemas.py  validator.py
agent_md_validator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_validator.py
tests/fixtures/: invalid_soul.md  valid_soul.md
tests/fixtures/valid_bundle/: SOUL.md  TEAM.md  WHOAMI.md
